--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,9 +2,10 @@
 ---
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/cv.css">
   </head>
