--- a/_sass/cv_print.scss
+++ b/_sass/cv_print.scss
@@ -3,7 +3,97 @@
       size: a4;
     }
 
+    $indent: 0em;
     body {
-      color:blue;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    
+    header {
+        text-align: center;
+        font-size: x-large;
+        font-weight: bold;
+    
+        +p {
+            text-align: center;
+        }
+    }
+    
+    p {
+        font-family: 'Times New Roman', Times, serif;
+    }
+    
+    h1 {
+        text-align: right;
+        color: grey;
+        font-size: larger;
+        border-top: 2px solid grey;
+    }
+    
+    h2 {
+        font-size: medium;
+        font-weight: 100;
+    
+        .when, .where {
+            font-weight: bold;
+        }
+    }
+    
+    section {
+        margin-left: $indent;
+    
+        h2 { 
+            margin-left: -$indent;
+        }
+    
+    }
+    
+    ul {
+        padding-left: 1em;
+    }
+    
+    #skills {
+        display: flex;
+        flex-wrap:  wrap;
+    
+        .skill {
+            width: 30%;
+            padding-left: 2.5%;
+            padding-right: 2.5%;
+            margin: 0px;
+    
+            &:last-of-type {
+                padding-right: 0%;
+            }
+    
+            &:first-of-type {
+                padding-left: 0%;
+            }
+    
+            h2 {
+                font-size: large;
+                font-weight: bold;
+                padding-bottom: 0px;
+                padding-left: $indent;
+                margin-bottom: 0px;
+            }
+    
+            table {
+                width: 100%;
+            }
+        }
+    }
+    
+    .education {
+        ul {
+            list-style-type: none;
+            padding-left: 0px;
+            
+            li span {
+                float: left;
+                width: 8em;
+                text-align: right;
+                padding-right: 1em;
+            }
+        }
     }
 }
