--- a/_sass/cv_mobile.scss
+++ b/_sass/cv_mobile.scss
@@ -2,12 +2,12 @@
 @media (orientation: portrait) and (max-width: 500px){
     h1 + div {
         max-height: 0px;
-        transition: max-height 0.25s ease;
+        transition: max-height 0.5s ease;
         overflow: hidden;
     }
 
     #radio-summary:checked ~ #summary + div {
-        max-height: calc-size(auto);
+        max-height: 1000px;
 
     }
 
