--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/cv.css">
+    <link rel="stylesheet" href="/assets/css/{{ page.css }}.css">
   </head>
   <body>
 {{ content }}
