--- a/assets/css/cv2 print.scss
+++ b/assets/css/cv2 print.scss
@@ -15,7 +15,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: $fontsize;
     // border: 1px solid salmon;
-    width: 205mm;
+    // width: 205mm;
     border: 1px solid black;
 }
 
