--- a/assets/css/cv2.scss
+++ b/assets/css/cv2.scss
@@ -1,5 +1,8 @@
 --- 
 ---
+
+@import "bootstrap/bootstrap";
+
 #qrlink {
     display: none;
 }
@@ -9,11 +12,19 @@ header {
      &+p {
         text-align: center;
     }
+
+}
+
+h1 {
+    // border-top: 2px solid royalblue;
+    text-align: left;
+    // color: royalblue;
+    @include font-size(2rem);
 }
 
 h2 {
-    font-size: 1.1rem;
     font-weight: 400;
+    @include font-size(1.2rem);
 
 }
 
@@ -26,25 +37,47 @@ h2 {
         display: inline-block;
         width: 50%;
     }
+
+    @media (min-width: 768px) {
+        section {
+            border-left: 1px solid lightblue;
+            &:first-child {
+                border-left: 0px solid white;
+            }
+        }
+    }
 }
 
 .job {
+
+    .headline { 
+        height: fit-content;
+    }
+
     .when {
         font-style: italic;
     }
 
+    .skills {
+        padding-left: 2rem;
+    }
 
+    // border-top: 2px solid lightblue;
+    border-left: 2px solid lightblue;
 
     @media (min-width: 768px) {
         h2 {
 
             display: flex;
             flex-direction: column;
+            // align-items: center;
 
-            .who { order: 2;}
+            .who { order: 2; }
             .role { order: 1;}
             .team { order: 3;}
         }
+        
+//        .when > li {text-align: center;}
     }
 
     @media (max-width: 768px) {
@@ -57,7 +90,7 @@ h2 {
                 content: "— "
             }
 
-                &::after {
+            &::after {
                 content:".";
             }
     
