--- a/assets/css/cv_screen.scss
+++ b/assets/css/cv_screen.scss
@@ -48,6 +48,11 @@ h2 {
     }
 }
 
+@media (min-width: breakpoint-min("md")) {
+    #Summary+div,.job p {text-align: justify;}
+}
+
+
 .job {
     border-left: 2px solid lightblue;
 
