--- a/assets/css/cv_screen.scss
+++ b/assets/css/cv_screen.scss
@@ -7,6 +7,10 @@ body {
     background-color: rgb(255, 255, 250);
 }
 
+a {
+    color: #00f;
+}
+
 #qrlink {
     display: none;
 }
@@ -53,7 +57,9 @@ h2 {
 }
 
 @media (min-width: breakpoint-min("md")) {
-    #Summary+div,.job p {text-align: justify;}
+    #Summary+div,.job {
+        p {text-align: justify;}
+    }
 }
 
 
@@ -112,19 +118,12 @@ h2 {
         }
     }
 
-    // border-top: 2px solid lightblue;
-
     @media (min-width: 768px) {
         h2 {
 
             display: flex;
             flex-direction: column;
-            // align-items: center;
-
-
         }
-        
-//        .when > li {text-align: center;}
     }
 
     @media (max-width: 768px) {
@@ -146,8 +145,6 @@ h2 {
     .role {
         font-weight: 600;
     }
-
-    
 }
 
 
