--- a/assets/css/cv_print.scss
+++ b/assets/css/cv_print.scss
@@ -11,7 +11,7 @@ $indent: 22mm;
 
 body {
     position: relative;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: $fontsize;
 }
 
