--- a/assets/css/cv_screen.scss
+++ b/assets/css/cv_screen.scss
@@ -62,6 +62,10 @@ h2 {
     }
 }
 
+@media (max-width: breakpoint-max("md")) {
+    .d-detail { display: none;}
+}
+
 
 .job {
     border-left: 2px solid lightblue;
